--- a/config/corneish_zen.conf
+++ b/config/corneish_zen.conf
@@ -22,3 +22,8 @@ CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=160
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
 
 #CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
+
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
